# quiver

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  RELEASES.md  clippy.toml  deny.toml  plan.md
.github/workflows/: rust.yml
crates/arrow-quiver/: Cargo.toml
crates/arrow-quiver-derive/: Cargo.toml
crates/arrow-quiver-derive/src/: lib.rs  quiver.rs
crates/arrow-quiver/examples/: example.rs
crates/arrow-quiver/src/: binary.rs  column.rs  column_desc.rs  datatype.rs  date.rs  dictionary.rs  duration.rs  error.rs  fixed_size_binary.rs  fixed_size_list.rs  lib.rs  list.rs  newtype.rs  option.rs  primitive.rs  string.rs  time.rs  timestamp.rs
crates/arrow-quiver/tests/: column.rs  compile_fail.rs  quiver.rs
crates/arrow-quiver/tests/compile_fail/: conflicting_exhaustiveness.rs  dictionary_option_key.rs  dictionary_option_key.stderr  duplicate_declared_metadata.rs  duplicate_metadata.rs  duplicate_metadata.stderr  exhaustive_with_extra_columns.rs  exhaustive_with_extra_columns.stderr  generics.rs  generics.stderr  malformed_declared_metadata.rs  malformed_declared_metadata.stderr  no_static_schema.rs  no_static_schema.stderr  punted_type.rs  punted_type.stderr  unknown_attribute.rs  unknown_attribute.stderr  unsupported_type.rs  unsupported_type.stderr
crates/quiver/: Cargo.toml
crates/quiver-derive/: Cargo.toml
crates/quiver-derive/src/: lib.rs
crates/quiver/benches/: sum.rs
crates/quiver/examples/: example.rs
crates/quiver/src/: column.rs  column_desc.rs  datatype.rs  date.rs  dictionary.rs  error.rs  fixed_size_binary.rs  lib.rs  newtype.rs  timestamp.rs
crates/quiver/tests/: column.rs  compile_fail.rs  quiver.rs
crates/quiver/tests/compile_fail/: conflicting_exhaustiveness.rs  conflicting_exhaustiveness.stderr  dictionary_option_key.rs  dictionary_option_key.stderr  duplicate_declared_metadata.rs  duplicate_declared_metadata.stderr  duplicate_metadata.rs  exhaustive_with_extra_columns.rs  generics.rs  malformed_declared_metadata.rs  no_static_schema.rs  no_static_schema.stderr  punted_type.rs  punted_type.stderr  unknown_attribute.rs  unsupported_type.rs
crates/quiver_core/: Cargo.toml  README.md
crates/quiver_core/src/: binary.rs  column.rs  column_desc.rs  datatype.rs  dictionary.rs  duration.rs  fixed_size_binary.rs  lib.rs  newtype.rs  string.rs  time.rs  timestamp.rs
crates/quiver_derive/: Cargo.toml
crates/quiver_derive/src/: lib.rs  quiver.rs
crates/quiver_types/: Cargo.toml  README.md
crates/quiver_types/src/: any_list.rs  binary.rs  column.rs  column_desc.rs  datatype.rs  date.rs  dictionary.rs  duration.rs  dynamic.rs  error.rs  fixed_size_binary.rs  fixed_size_list.rs  large_list.rs  lib.rs  list.rs  list_value.rs  list_view.rs  map.rs  newtype.rs  option.rs  primitive.rs  run.rs  string.rs  time.rs  timestamp.rs  typed_array.rs
crates/quiver_types/tests/: soundness.rs
scripts/: generate_changelog.py  test_arrow_versions.sh
