[package]
authors.workspace = true
categories = ["encoding", "data-structures"]
description = "Proc-macros for the arrow-quiver crate"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "README.md", "**/*.rs", "Cargo.toml"]
keywords = ["arrow", "columnar", "schema", "validation", "derive"]
license.workspace = true
name = "arrow-quiver-derive"
publish = false                                                      # TODO: set to `true` if you plan on publishing the crate
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
