[package]
authors.workspace = true
categories = []                                                      # TODO: fill in if you plan on publishing the crate
description = "A schema specification and validator for Arrow record batches"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "**/*.rs", "Cargo.toml"]
keywords = []                                                        # TODO: fill in if you plan on publishing the crate
license.workspace = true
name = "arrow-quiver"
publish = false                                                      # TODO: set to `true` if you plan on publishing the crate
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version = "0.1.0"

[lints]
workspace = true

[[example]]
name = "example"
required-features = ["derive"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = ["derive"]

## Enable the `#[derive(Record)]` proc-macro.
derive = ["dep:arrow-quiver-derive"]


[dependencies]
arrow.workspace = true
thiserror.workspace = true

arrow-quiver-derive = { workspace = true, optional = true }


[dev-dependencies]
trybuild.workspace = true
