[package]
authors.workspace = true
categories = ["encoding", "data-structures"]
description = "A schema specification and validator for Arrow record batches"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "README.md", "**/*.rs", "Cargo.toml"]
keywords = ["arrow", "columnar", "schema", "validation", "derive"]
license.workspace = true
name = "quiver"
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[[example]]
name = "example"
required-features = ["derive"]

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[features]
default = ["derive"]

## Enable the `#[derive(Quiver)]` proc-macro.
derive = ["dep:quiver_derive"]

## Embed a list of all feature flags in the crate documentation, using the [`document-features`](https://docs.rs/document-features) crate.
document-features = ["dep:document-features"]


[dependencies]
quiver_core.workspace = true

document-features = { workspace = true, optional = true }
quiver_derive = { workspace = true, optional = true }


[dev-dependencies]
trybuild.workspace = true
