[package]
authors.workspace = true
categories = ["encoding", "data-structures"]
description = "Core types for the quiver crate"
edition.workspace = true
homepage.workspace = true
include = [
    "LICENSE-APACHE",
    "LICENSE-MIT",
    "README.md",
    "**/*.rs",
    "Cargo.toml",
]
keywords = ["arrow", "columnar", "schema", "validation"]
license.workspace = true
name = "quiver_core"
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[package.metadata.docs.rs]
all-features = true
targets = ["x86_64-unknown-linux-gnu", "wasm32-unknown-unknown"]


[dependencies]
arrow.workspace = true
half.workspace = true
thiserror.workspace = true

[dev-dependencies]
# For doctests, which use the `quiver::` paths that users see:
quiver.workspace = true
