[package]
authors.workspace = true
categories = ["encoding", "data-structures"]
description = "Proc-macros for the quiver crate"
edition.workspace = true
homepage.workspace = true
include = ["LICENSE-APACHE", "LICENSE-MIT", "README.md", "**/*.rs", "Cargo.toml"]
keywords = ["arrow", "columnar", "schema", "validation", "derive"]
license.workspace = true
name = "quiver_derive"
publish = true
readme = "README.md"
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lints]
workspace = true

[lib]
proc-macro = true

[package.metadata.docs.rs]
all-features = true


[dependencies]
proc-macro2.workspace = true
quote.workspace = true
syn.workspace = true
